fix wrapping tooltip

--- a/main.css
+++ b/main.css
@@ -102,7 +102,7 @@ body {
 div.tooltip {
   position: absolute;
   text-align: left;
-  width: 100px;
+  width: 110px;
   color:white;
   padding: 8px;
   font: 10px sans-serif;
